--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "brace-expansion": "^2.0.2",
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
+    "form-data": "^3.0.4",
+    "on-headers": "^1.1.0",
     "react": "18.3.1",
     "react-native": "0.76.9"
   },
