Modification majeur de l'application

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,32 @@
 {
     "cSpell.words": [
+        "Accueil",
+        "ajouté",
         "appuer",
         "appuyer",
         "avez",
         "Bienvenue",
+        "cette",
+        "chargement",
+        "Connecte",
+        "créé",
+        "enregistré",
+        "enregistrés",
+        "Envie",
+        "implémentée",
+        "liste",
+        "portée",
+        "Pressable",
+        "profil",
+        "Rechercher",
+        "remplir",
+        "Retour",
+        "S’inscrire",
+        "sauvegarde",
+        "Succès",
         "tete",
         "texte",
+        "verrez",
         "Vous"
     ]
 }
